--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "description": "Open Zeppelin Project",
     "main": "index.js",
     "scripts": {
-        "test": "truffle test",
-        "t:compile":"truffle compile",
-        "t:migrate":"truffle migrate"
+        "t:test": "truffle test",
+        "t:compile": "truffle compile",
+        "t:migrate": "truffle migrate",
+        "g:start": "ganache-cli --deterministic"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {},
     "devDependencies": {
+        "@openzeppelin/cli": "^2.8.2",
         "@openzeppelin/contracts": "^3.1.0",
         "@openzeppelin/test-environment": "^0.1.4",
         "@types/chai": "^4.2.12",
@@ -22,8 +24,9 @@
         "eslint-config-prettier": "^6.7.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-prettier": "^3.1.1",
+        "ganache-cli": "^6.10.1",
         "mocha": "^8.1.1",
-        "node": "^8.10.0",
+        "truffle": "^5.1.37",
         "ts-node": "^8.10.2",
         "typechain": "1.0.3",
         "typechain-target-truffle": "1.0.2",
